// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledText Should render correctly with custom values 1`] = `
<Text
  style={
    {
      "color": "#FFD1AD",
      "fontFamily": "Archivo-ExtraBold",
      "fontSize": 40,
      "textAlign": "right",
    }
  }
>
  This is a test
</Text>
`;

exports[`StyledText Should render correctly with default values 1`] = `
<Text
  style={
    {
      "color": "#000",
      "fontFamily": "Archivo-Regular",
      "fontSize": 18,
      "textAlign": "right",
    }
  }
>
  This is a test
</Text>
`;
